--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<title>certificado</title>
+<title>material</title>
 <link rel="stylesheet" href="https://lvsihmx.github.io/certificadoih/img/main.css">
 
 <body>
 
 
-  <center>  <img src="https://lvsihmx.github.io/english/img/yle (1)1.jpg" width="455" height="156" /> </center>
+  <center>  <img src="https://lvsihmx.github.io/english/img/yle (1)1.jpg" width="800" height="400" /> </center>
 
    
-  <center>  <img src="https://lvsihmx.github.io/english/img/yle (1).png" width="177" height="145" style="float:right"/>
+  <center>  <img src="https://lvsihmx.github.io/english/img/yle (1).png" width="800" height="400" style="float:left"/>
   </center> 
     
    
