--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </center> 
     
    
-  <center>  <img src="https://lvsihmx.github.io/english/img/yle (2).png" width="800" height="400" style="float:right"/>
+  <center>  <img src="https://lvsihmx.github.io/english/img/yle (2)a.png" width="800" height="400" style="float:right"/>
 	  
 
   </center> 
