--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <body>
 
+	<div>
 
   <center>  <img src="https://lvsihmx.github.io/english/img/yle (1)1.jpg" width="800" height="400" /> </center>
 
-   
+   <div>
   <center>  <img src="https://lvsihmx.github.io/english/img/yle (1).png" width="800" height="400" style="float:left"/>
   </center> 
     
@@ -15,18 +16,21 @@
 	  
 
   </center> 
-    
+    </div>
 
-	 
-  <center>  <img src="https://lvsihmx.github.io/english/img/yle (8).png" width="1200" height="400" style="float:right"/>
+	 <div>
+  <center>  <img src="https://lvsihmx.github.io/english/img/yle (8).png" width="1200" height="600" style="float:right"/>
 	  
 
   </center> 
+		 
+		 </div>
+		
+		<div>
       <center>  <img src="https://lvsihmx.github.io/english/img/yle (4).png" width="800" height="400" style="float:right"/>
 	  
 
   </center> 
-	
 	
 	
   </center> 
@@ -35,7 +39,7 @@
 
   </center> 
 
-
+</div>
   </center> 
       <center>  <img src="https://lvsihmx.github.io/english/img/yle (3).png" width="800" height="400" style="float:right"/>
 	  
