--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <link rel="stylesheet" href="https://lvsihmx.github.io/certificadoih/img/main.css">
 
 <body>
+ <center>  <img src="https://lvsihmx.github.io/english/img/yle (4).png" width="800" height="400"/>
+	  
 
 	<div>
 
@@ -27,7 +29,7 @@
 		 </div>
 		
 		<div>
-      <center>  <img src="https://lvsihmx.github.io/english/img/yle (4).png" width="800" height="400" style="float:right"/>
+      <center>  <img src="https://lvsihmx.github.io/english/img/yle (4).png" width="800" height="400"/>
 	  
 
   </center> 
