--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <link rel="stylesheet" href="https://lvsihmx.github.io/certificadoih/img/main.css">
 
 <body>
- <center>  <img src="https://lvsihmx.github.io/english/img/yle (4).png" width="800" height="400"/>
+
+  <center>  <img src="https://lvsihmx.github.io/english/img/yle (8).png" width="1450" height="250" />
+	  
 	  
 
 	<div>
@@ -25,7 +27,9 @@
 	  
 
   </center> 
-		 
+		  <center>  <img src="https://lvsihmx.github.io/english/img/yle (4).png" width="800" height="400"style="float:left"/>
+	  
+
 		 </div>
 		
 		<div>
