--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         	       </p>   
             <p>   
      	         <center>
-          <a href=src="https://lvsihmx.github.io/english/img/pet_exam_3.pdf" class="btn btn-green">pet 3</a>
+          <a href="src="https://lvsihmx.github.io/english/img/ket_test_1.pdf" class="btn btn-green">pet 3</a>
         
           </center>
           </p>
